meta-lead-ads-package/main/default/objects/Meta_Field_Mapping__c/Meta_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Meta Field Mapping</label>
    <nameField>
        <label>Meta Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Field Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>