meta-lead-ads-package/main/default/objects/Meta_Field_Mapping__c/fields/Facebook_Field__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Field__c</fullName>
    <label>Facebook Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>