meta-lead-ads-package/main/default/objects/Meta_Field_Mapping__c/fields/Is_UTM__c.field-meta.xml
<CustomField>
    <fullName>Is_UTM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UTM</label>
    <type>Checkbox</type>
</CustomField>