meta-lead-ads-package/main/default/objects/Meta_Field_Mapping__c/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>