meta-lead-ads-package/main/default/objects/Meta_Field_Mapping__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>